--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -44,4 +44,20 @@
       </div>
     </div>
   </div>
+  <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
+<script>
+document.addEventListener("DOMContentLoaded", function() {
+  document.querySelectorAll('.swiper').forEach(function(swiperEl) {
+    new Swiper(swiperEl, {
+      loop: true,
+      pagination: { el: swiperEl.querySelector(".swiper-pagination"), clickable: true },
+      navigation: {
+        nextEl: swiperEl.querySelector(".swiper-button-next"),
+        prevEl: swiperEl.querySelector(".swiper-button-prev"),
+      },
+    });
+  });
+});
+</script>
+
 </footer>
