--- a/_includes/carousel.html
+++ b/_includes/carousel.html
@@ -10,15 +10,13 @@
 <style>
 .swiper {
   width: 100%;
-  height: 400px;
+  margin: 2rem auto;
   border-radius: 0.5rem;
-  overflow: hidden;
-  margin: 1rem 0;
 }
 .swiper-slide img {
   width: 100%;
-  height: 100%;
-  object-fit: cover;
+  height: auto;
+  display: block;
 }
 </style>
 
