--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -35,7 +35,7 @@ common-js:
 
   {% include footer-scripts.html %}
 
-  {% include carouselhead.html %}
+  {% include carousel.html %}
 
 </body>
 </html>
