--- a/_includes/carousel.html
+++ b/_includes/carousel.html
@@ -10,12 +10,16 @@
 <style>
 .swiper {
   width: 100%;
+  max-width: 1000px;
   margin: 2rem auto;
   border-radius: 0.5rem;
+  overflow: hidden;
+  height: auto; /* dynamische Höhe */
 }
+
 .swiper-slide img {
   width: 100%;
-  height: auto;
+  height: auto; /* Höhe automatisch */
   display: block;
 }
 </style>
