--- a/assets/css/beautifuljekyll.css
+++ b/assets/css/beautifuljekyll.css
@@ -6,22 +6,22 @@ layout: null
 
 :root {
   /* config file CSS variables */
-  --page-col: {{ site.page-col | default: "#FFFFFF" }};
-  --text-col: {{ site.text-col | default: "#404040" }};
-  --link-col: {{ site.link-col | default: "#008AFF" }};
-  --hover-col: {{ site.hover-col | default: "#0085A1" }};
-  --navbar-col: {{ site.navbar-col | default: "#EAEAEA" }};
-  --navbar-text-col: {{ site.navbar-text-col | default: "#404040" }};
-  --navbar-border-col: {{ site.navbar-border-col | default: "#DDDDDD" }};
-  --footer-col: {{ site.footer-col | default: "#EAEAEA" }};
-  --footer-text-col: {{ site.footer-text-col | default: "#777777" }};
-  --footer-link-col: {{ site.footer-link-col | default: "#404040" }};
-  --footer-hover-col: {{ site.footer-hover-col | default: "#0085A1" }};
+  --page-col: {{ site.page-col | default: "#FDFCF9" }};
+  --text-col: {{ site.text-col | default: "#2E2A25" }};
+  --link-col: {{ site.link-col | default: "#CC7722" }};
+  --hover-col: {{ site.hover-col | default: "#CC7722" }};
+  --navbar-col: {{ site.navbar-col | default: "#355E3B" }};
+  --navbar-text-col: {{ site.navbar-text-col | default: "#FDFCF9" }};
+  --navbar-border-col: {{ site.navbar-border-col | default: "#355E3B" }};
+  --footer-col: {{ site.footer-col | default: "#355E3B" }};
+  --footer-text-col: {{ site.footer-text-col | default: "#FDFCF9" }};
+  --footer-link-col: {{ site.footer-link-col | default: "#FDFCF9" }};
+  --footer-hover-col: {{ site.footer-hover-col | default: "#CC7722" }};
 
   /* common CSS variables */
   --body-font: 'Lora', 'Times New Roman', serif;
   --header-font: 'Open Sans', 'Helvetica Neue', Helvetica, Arial, sans-serif;
-  --mid-col: #808080;
+  --mid-col: #000000;
 }
 
 /* --- General --- */
@@ -90,10 +90,10 @@ blockquote p:first-child {
   background: #EEE;
 }
 hr.small {
-  max-width: 6.25rem;
+  max-width: 8.25rem;
   margin: 1rem auto;
   border-width: 0.25rem;
-  border-color: inherit;
+  border-color: #2e2a25;
   border-radius: 0.1875rem;
 }
 
